src/importer/ptb/snapshots/annatto__importer__ptb__tests__with_edge_functions.snap
---
source: src/importer/ptb/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="syntax::cat" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k3" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k4" for="node" attr.name="default_ns::pos" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k6" for="node" attr.name="annis::tok-whitespace-before" attr.type="string"/>
    <key id="k7" for="node" attr.name="syntax::func" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="with_edge_functions">
            <data key="k3">corpus</data>
        </node>
        <node id="with_edge_functions/test">
            <data key="k1">test</data>
            <data key="k3">corpus</data>
        </node>
        <node id="with_edge_functions/test#text">
            <data key="k3">datasource</data>
        </node>
        <node id="with_edge_functions/test#n1">
            <data key="k0">S</data>
            <data key="k2">syntax</data>
            <data key="k3">node</data>
        </node>
        <node id="with_edge_functions/test#n2">
            <data key="k0">NP</data>
            <data key="k2">syntax</data>
            <data key="k3">node</data>
        </node>
        <node id="with_edge_functions/test#t1">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">PRON</data>
            <data key="k5">This</data>
        </node>
        <node id="with_edge_functions/test#n3">
            <data key="k0">VP</data>
            <data key="k2">syntax</data>
            <data key="k3">node</data>
        </node>
        <node id="with_edge_functions/test#t2">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">VERB</data>
            <data key="k5">is</data>
            <data key="k6"> </data>
        </node>
        <node id="with_edge_functions/test#n4">
            <data key="k0">NP</data>
            <data key="k2">syntax</data>
            <data key="k3">node</data>
        </node>
        <node id="with_edge_functions/test#t3">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">DET</data>
            <data key="k5">a</data>
            <data key="k6"> </data>
        </node>
        <node id="with_edge_functions/test#t4">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">NOUN</data>
            <data key="k5">test</data>
            <data key="k6"> </data>
        </node>
        <edge id="e0" source="with_edge_functions/test#n1" target="with_edge_functions/test#n2" label="Dominance/syntax/">
            <data key="k7">subj</data>
        </edge>
        <edge id="e1" source="with_edge_functions/test#n1" target="with_edge_functions/test#n3" label="Dominance/syntax/">
        </edge>
        <edge id="e2" source="with_edge_functions/test#n2" target="with_edge_functions/test#t1" label="Dominance/syntax/">
        </edge>
        <edge id="e3" source="with_edge_functions/test#n3" target="with_edge_functions/test#t2" label="Dominance/syntax/">
            <data key="k7">head</data>
        </edge>
        <edge id="e4" source="with_edge_functions/test#n3" target="with_edge_functions/test#n4" label="Dominance/syntax/">
            <data key="k7">pred</data>
        </edge>
        <edge id="e5" source="with_edge_functions/test#n4" target="with_edge_functions/test#t3" label="Dominance/syntax/">
        </edge>
        <edge id="e6" source="with_edge_functions/test#n4" target="with_edge_functions/test#t4" label="Dominance/syntax/">
            <data key="k7">head</data>
        </edge>
        <edge id="e7" source="with_edge_functions/test#n1" target="with_edge_functions/test#n2" label="Dominance/syntax/edge">
            <data key="k7">subj</data>
        </edge>
        <edge id="e8" source="with_edge_functions/test#n1" target="with_edge_functions/test#n3" label="Dominance/syntax/edge">
        </edge>
        <edge id="e9" source="with_edge_functions/test#n2" target="with_edge_functions/test#t1" label="Dominance/syntax/edge">
        </edge>
        <edge id="e10" source="with_edge_functions/test#n3" target="with_edge_functions/test#t2" label="Dominance/syntax/edge">
            <data key="k7">head</data>
        </edge>
        <edge id="e11" source="with_edge_functions/test#n3" target="with_edge_functions/test#n4" label="Dominance/syntax/edge">
            <data key="k7">pred</data>
        </edge>
        <edge id="e12" source="with_edge_functions/test#n4" target="with_edge_functions/test#t3" label="Dominance/syntax/edge">
        </edge>
        <edge id="e13" source="with_edge_functions/test#n4" target="with_edge_functions/test#t4" label="Dominance/syntax/edge">
            <data key="k7">head</data>
        </edge>
        <edge id="e14" source="with_edge_functions/test#t1" target="with_edge_functions/test#t2" label="Ordering/annis/">
        </edge>
        <edge id="e15" source="with_edge_functions/test#t2" target="with_edge_functions/test#t3" label="Ordering/annis/">
        </edge>
        <edge id="e16" source="with_edge_functions/test#t3" target="with_edge_functions/test#t4" label="Ordering/annis/">
        </edge>
        <edge id="e17" source="with_edge_functions/test" target="with_edge_functions" label="PartOf/annis/">
        </edge>
        <edge id="e18" source="with_edge_functions/test#text" target="with_edge_functions/test" label="PartOf/annis/">
        </edge>
        <edge id="e19" source="with_edge_functions/test#n1" target="with_edge_functions/test" label="PartOf/annis/">
        </edge>
        <edge id="e20" source="with_edge_functions/test#n2" target="with_edge_functions/test" label="PartOf/annis/">
        </edge>
        <edge id="e21" source="with_edge_functions/test#t1" target="with_edge_functions/test#text" label="PartOf/annis/">
        </edge>
        <edge id="e22" source="with_edge_functions/test#n3" target="with_edge_functions/test" label="PartOf/annis/">
        </edge>
        <edge id="e23" source="with_edge_functions/test#t2" target="with_edge_functions/test#text" label="PartOf/annis/">
        </edge>
        <edge id="e24" source="with_edge_functions/test#n4" target="with_edge_functions/test" label="PartOf/annis/">
        </edge>
        <edge id="e25" source="with_edge_functions/test#t3" target="with_edge_functions/test#text" label="PartOf/annis/">
        </edge>
        <edge id="e26" source="with_edge_functions/test#t4" target="with_edge_functions/test#text" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
